--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-body {
-    margin: 0;
-    padding: 0;
+
+  body {
+    background: url(https://github.com/havistar/randomfriendsquotes/blob/main/friends-tv-show_640.jpg?raw=true) center no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 100%;
   }
   
   h1 {
