--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
   body {
-    background: url('https://r1.ilikewallpaper.net/iphone-wallpapers/download-109532/friends-tv-show_640.jpg') center no-repeat;
+    background: url('https://www.gingerandivory.com/wp-content/uploads/2019/01/friends-ill-be-there-for-you.jpg') center no-repeat;
     background-size: cover;
     background-attachment: fixed;
     text-align: center;
