--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
   body {
-    background url("https://www.gingerandivory.com/wp-content/uploads/2019/01/friends-ill-be-there-for-you.jpg") no-repeat scroll 50% 100%;
+    background: url('https://www.gingerandivory.com/wp-content/uploads/2019/01/friends-ill-be-there-for-you.jpg') no-repeat scroll 50%;
     background-size: cover;
     background-attachment: fixed;
     text-align: center;
