--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
   body {
     background: url('https://ih1.redbubble.net/image.958797964.7866/flat,750x,075,f-pad,750x1000,f8f8f8.jpg') center no-repeat;
-    background-size: cover;
+    background-size: 100%;
     background-attachment: fixed;
     text-align: center;
     font-family: Helvetica, Arial, sans-serif;
