--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
   }
   
   h1 {
-    font-family: 'Arimo', sans-serif;
+    font-family: Minus Cre;
     font-weight: bold;
-    font-size: 2.9rem;
+    font-size: 20 px;
   }
   
   #btn {
