--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   }
   
   #btn {
+    margin-top: .5rem;
     padding: 1rem 2.9rem;
     background-color: black;
     color: #fff;
@@ -29,3 +30,10 @@
     max-height: 300px;
     width: 200px;
   }
+
+  .quote-body { 
+    margin: auto; 
+    width: 400px; 
+    height: 200px; 
+    margin-top: 150px;
+   }
