--- a/style.css
+++ b/style.css
@@ -37,3 +37,18 @@
     height: 200px; 
     margin-top: 150px;
    }
+   .quote-body { 
+    margin: auto; 
+    width: 400px; 
+    height: 200px; 
+    margin-top: 150px;
+   }
+   #quote { 
+    font-size: 40px; 
+    font-weight: bold;
+   }
+   .author {
+    font-weight: normal;
+    font-size: 20px
+   }
+   
