--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   }
   
   h1 {
-    font-family: Minus Cre;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: 20 px;
   }
